--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,6 +65,7 @@ import '../styles/global.css';
 		})} />
 	</head>
 	<body style="background-color: #ffffff; color: #000000;">
+		<meta name="google-site-verification" content="QnUsOtyQqqGQspitKoNedHKpBusxYT0S5xXnYFT-8u8" />
 		<slot />
 	</body>
 </html>
